--- a/front/app/assets/index.html
+++ b/front/app/assets/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Brunch</title>
+  <title>Super Melee</title>
   <link rel="stylesheet" href="/app.css">
   <script src="/phaser.min.js"></script>
   <script src="/vendor.js"></script>
